// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flags > --output-* > output should apply #0 1`] = `
Object {
  "devtool": "source-map",
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/output/output-entry.js",
  "mode": "development",
  "output": Object {
    "filename": "bundle.js",
    "path": "<PROJECT_ROOT>/dist/.output",
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --output-* > output should build #0 1`] = `
"Version: webpack 4.3.0
        Asset      Size  Chunks             Chunk Names
    bundle.js  3.38 KiB    main  [emitted]  main
bundle.js.map  2.84 KiB    main  [emitted]  main
Entrypoint main = bundle.js bundle.js.map
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/flags/output/output-entry.js] 80 bytes {main} [built]"
`;

exports[`Flags > --output-* > output-chunk-filename should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/output/output-entry.js",
  "mode": "development",
  "output": Object {
    "chunkFilename": "[id].output-chunk.js",
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --output-* > output-chunk-filename should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  3.51 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/flags/output/output-entry.js] 80 bytes {main} [built]"
`;

exports[`Flags > --output-* > output-filename should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/output/output-entry.js",
  "mode": "development",
  "output": Object {
    "filename": "output-[name].js",
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --output-* > output-filename should build #0 1`] = `
"Version: webpack 4.3.0
         Asset      Size  Chunks             Chunk Names
output-main.js  3.51 KiB    main  [emitted]  main
Entrypoint main = output-main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/flags/output/output-entry.js] 80 bytes {main} [built]"
`;

exports[`Flags > --output-* > output-jsonp-function should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/output/output-entry.js",
  "mode": "development",
  "output": Object {
    "jsonpFunction": "output-func",
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --output-* > output-jsonp-function should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  3.51 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/flags/output/output-entry.js] 80 bytes {main} [built]"
`;

exports[`Flags > --output-* > output-library should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/output/output-entry.js",
  "mode": "development",
  "output": Object {
    "library": "__output__",
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --output-* > output-library should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  3.55 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/flags/output/output-entry.js] 80 bytes {main} [built]"
`;

exports[`Flags > --output-* > output-library-target should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/output/output-entry.js",
  "mode": "development",
  "output": Object {
    "libraryTarget": "var",
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --output-* > output-library-target should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  3.51 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/flags/output/output-entry.js] 80 bytes {main} [built]"
`;

exports[`Flags > --output-* > output-path should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/output/output-entry.js",
  "mode": "development",
  "output": Object {
    "path": "<PROJECT_ROOT>/dist/.output",
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --output-* > output-path should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  3.51 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/flags/output/output-entry.js] 80 bytes {main} [built]"
`;

exports[`Flags > --output-* > output-pathinfo should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/output/output-entry.js",
  "mode": "development",
  "output": Object {
    "pathinfo": true,
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --output-* > output-pathinfo should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  3.51 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/flags/output/output-entry.js] 80 bytes {main} [built]"
`;

exports[`Flags > --output-* > output-public-path should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/output/output-entry.js",
  "mode": "development",
  "output": Object {
    "publicPath": "/output-path/",
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --output-* > output-public-path should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  3.52 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/flags/output/output-entry.js] 80 bytes {main} [built]"
`;

exports[`Flags > --output-* > output-source-map-filename should apply #0 1`] = `
Object {
  "devtool": "source-map",
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/output/output-entry.js",
  "mode": "development",
  "output": Object {
    "sourceMapFilename": "output-[name].map",
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --output-* > output-source-map-filename should build #0 1`] = `
"Version: webpack 4.3.0
          Asset      Size  Chunks             Chunk Names
        main.js  3.38 KiB    main  [emitted]  main
output-main.map  2.84 KiB    main  [emitted]  main
Entrypoint main = main.js output-main.map
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/flags/output/output-entry.js] 80 bytes {main} [built]"
`;
